# hero-api

./: Cargo.toml  README.md  Rocket.toml  docker-compose.yml
migrations/2020-04-21-191307_heroes/: down.sql  up.sql
migrations/2020-04-26-212045_hero/: up.sql
migrations/2020-09-06-093139_user/: up.sql
src/: auth.rs  cors.rs  hero.rs  jwt.rs  main.rs  schema.rs
src/authh/: mod.rs
src/hero/: mod.rs  model.rs
src/user/: mod.rs  model.rs  schema.rs
