[package]
name = "hero-api"
version = "0.1.0"
authors = ["Martin Porres <martin.porres@ymail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Rocket Webserver
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", features = ["json", "diesel_postgres_pool"] }

# Diesel ORM
diesel = { version = "1.4.4", features = ["chrono", "postgres"] }

# Powerful date and time functionality
chrono = { version = "0.4.6", features = ["serde"] }

# JWT
jsonwebtoken = "7.2.0"

# Serialization/Deserialization
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# Commun
regex = "1"